# oflauncher-stainless

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FindSQLite3.cmake  embed.sh
.github/workflows/: cmake.yml
launcher/remote/: ofmanifest.db
res/key/: key.pub
src/: main.cpp  main.h  version.h
src/db/: OFSDatabase.cpp  OFSDatabase.h
src/facade/: CMakeLists.txt  OFSFacade.cpp  OFSFacade.h
src/facade/dll_linux/: OFSLoadLib.cpp  OFSLoadLib.h
src/facade/dll_win/: OFSLoadLib.cpp  OFSLoadLib.h
src/gui/: OFSGui.cpp  OFSGui.h  OFSGuiActs.h  OFSGuiButton.cpp  OFSGuiButton.h  OFSGuiError.cpp  OFSGuiError.h  OFSGuiImage.cpp  OFSGuiImage.h  OFSGuiSpinny.cpp  OFSGuiSpinny.h  OFSGuiText.cpp  OFSGuiText.h  OFSGuiTextEntry.cpp  OFSGuiTextEntry.h  OFSLayout.cpp  OFSLayout.h
src/gui/res/: EmbedData.h  SourceSansPro-Regular.ttf.h  cancel.bmp.h  install.bmp.h  spinny.bmp.h  tab.bmp.h  update.bmp.h
src/launcher/: CMakeLists.txt  main.cpp  main.h
src/launcher/MD5/: CMakeLists.txt  OFSVerifyIntegrity.cpp  OFSVerifyIntegrity.h
src/launcher/db/: CMakeLists.txt  OFSDatabase.cpp  OFSDatabase.h  OFSDatabaseElement.h
src/launcher/gameinfo/: CMakeLists.txt  OFSGameInfo.cpp  OFSGameInfo.h
src/launcher/gui/: CMakeLists.txt  OFSGui.cpp  OFSGui.h  OFSGuiActs.h  OFSGuiButton.cpp  OFSGuiButton.h  OFSGuiDirButton.cpp  OFSGuiDirButton.h  OFSGuiElement.cpp  OFSGuiElement.h  OFSGuiImage.cpp  OFSGuiImage.h  OFSGuiProgBar.cpp  OFSGuiProgBar.h  OFSGuiSpinny.cpp  OFSGuiSpinny.h  OFSGuiText.cpp  OFSGuiText.h  OFSGuiTextEntry.cpp  OFSGuiTextEntry.h  OFSGuiThread.cpp  OFSGuiThread.h  OFSLayout.cpp  OFSLayout.h  OFSMessageDiag.cpp  OFSMessageDiag.h
src/launcher/gui/res/: EmbedData.h  SourceCodePro-Bold.ttf.h  SourceCodePro-Regular.ttf.h  SourceSansPro-Regular.ttf.h  barL.bmp.h  barM.bmp.h  barM_n.bmp.h  barR.bmp.h  button_d.bmp.h  button_hover.bmp.h  button_idle.bmp.h  button_press.bmp.h  button_stale.bmp.h  cancel.bmp.h  dir.bmp.h  dir_sel.bmp.h  folder.bmp.h  gear2.bmp.h  icon.bmp.h  install.bmp.h  primary_hover.bmp.h  primary_idle.bmp.h  primary_press.bmp.h  primary_stale.bmp.h  promo.bmp.h  slice.bmp.h  spinny.bmp.h  stripe.bmp.h  tab.bmp.h  tf2build.ttf.h  update.bmp.h
src/launcher/hashlib2plus/: CMakeLists.txt  hl_wrapperfactory.cpp
src/launcher/importsvn/: CMakeLists.txt  OFSImportSVN.cpp  OFSImportSVN.h
src/launcher/launchopt/: CMakeLists.txt  OFSLaunchOpt.cpp  OFSLaunchOpt.h
src/launcher/lzma/: CMakeLists.txt  OFLZMA.cpp  OFLZMA.h
src/launcher/nativefiledialog/: CMakeLists.txt
src/launcher/net/: CMakeLists.txt  OFSNet.cpp  OFSNet.h  OFSPubKey.h
src/net/: OFSNet.cpp  OFSNet.h
src/shared/config/: CMakeLists.txt  OFSConfig.cpp  OFSConfig.h
src/shared/steam/: CMakeLists.txt  OFSPathDiscover.cpp  OFSPathDiscover.h  OFSSteam.cpp  OFSSteam.h  OFSSteamApp.cpp  OFSSteamApp.h
src/shared/util/: CMakeLists.txt  OFFilesystem.h  OFSRunExe.h  OFSUtil.cpp  OFSUtil.h  json.hpp  md5.cpp  md5.h  nineSlice.cpp  nineSlice.h  openURL-linux.cpp  openURL-win.cpp  openURL.h
src/steam/: OFSPathDiscover.cpp  OFSPathDiscover.h
src/updater/: OFUpdater.cpp  OFUpdater.h
